--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -33,6 +33,11 @@
   <script src="spec/fail.spec.js"></script>        
   <script src="spec/beforeEach.spec.js"></script>        
   <script src="spec/afterEach.spec.js"></script>       
+  <script src="spec/beforeAll.spec.js"></script>       
+  <script src="spec/afterAll.spec.js"></script>       
+  <script src="spec/aninharSuites.spec.js"></script>       
+  <script src="spec/xDescribe.spec.js"></script>       
+  <script src="spec/desabilitandoTestes.spec.js"></script>       
 
 </head>
 <body>
