Incluindo teste com SPY

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -38,6 +38,7 @@
   <script src="spec/aninharSuites.spec.js"></script>       
   <script src="spec/xDescribe.spec.js"></script>       
   <script src="spec/desabilitandoTestes.spec.js"></script>       
+  <script src="spec/spyOn.spec.js"></script>       
 
 </head>
 <body>
